# gratis

./: .dockerignore  .env.local.example  .gitignore  DESIGN.md  Dockerfile  README.md  benchmark.py  config.json  dev.py  docker-compose.minimal.yml  docker-compose.yml  eslint.config.mjs  independent_ranker.py  live_health_ranker.py  main.py  models_dev_ranker.py  package-lock.json  package.json  ranker.py  rankings_data.json  rich_ranker.py  test_models_dev.py  wrangler.jsonc
backend/: .dockerignore  .railwayignore  Dockerfile  main.py  pyproject.toml
backend/migrations/: 001_init.sql
backend/providers/: api_keys.py  arena.py  authors.py  availability.py  availability_pg.py  capabilities.py  cerebras.py  cloudflare.py  db.py  groq.py  intelligence.py  market_store.py  models.py  openrouter.py  params.py  scoring.py  test_api_keys.py  test_arena.py  test_authors.py  test_availability.py  test_byok.py  test_capabilities.py  test_cloudflare.py  test_intelligence.py  test_params.py  test_pool_ids.py  test_scoring.py  test_ttl_cache.py  ttl_cache.py  usage.py
docs/design/: 2026-06-07-warm-editorial-chat.md
docs/plans/: 2026-05-02-ui-overhaul-linear.md
src/app/: design-system.test.ts  globals.css  layout.tsx  page.tsx  z-layers.test.ts
src/components/: providers.tsx
src/config/: api.ts  config.test.ts  models.ts  providers.ts  routes.ts  storage.ts  ui.ts
src/lib/: chat-db.ts  keybindings.ts  store.test.ts  store.ts  types.ts  use-chat-thread.ts  use-global-hotkeys.ts  utils.ts  vault-db.ts  vault.test.ts  vault.ts
src/stores/: chat-session-store.test.ts  (+4 more)
(+133 files in other folders)
